--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/Hop/BCHThamGiaHop.xaml
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/UI/Hop/BCHThamGiaHop.xaml
@@ -1,55 +1,223 @@
-﻿<Window x:Class="QuanLyHoiNguoiCaoTuoi.UI.Hop.BCHThamGiaHop"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyHoiNguoiCaoTuoi.UI.Hop"
+        xmlns:DATA="clr-namespace:QuanLyHoiNguoiCaoTuoi.DATA" x:Class="QuanLyHoiNguoiCaoTuoi.UI.Hop.BCHThamGiaHop"
         mc:Ignorable="d"
-        Title="BCH tham gia họp" Height="520" Width="700" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="BCH tham gia họp" Height="520" Width="700" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+    <Window.Resources>
+        <CollectionViewSource x:Key="hop_bchViewSource" d:DesignSource="{d:DesignInstance {x:Type DATA:hop_bch}, CreateList=True}"/>
+        <CollectionViewSource x:Key="thong_tin_ban_chap_hanhViewSource" d:DesignSource="{d:DesignInstance {x:Type DATA:thong_tin_ban_chap_hanh}, CreateList=True}"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource hop_bchViewSource}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="45"></RowDefinition>
-            <RowDefinition Height="45"></RowDefinition>
-            <RowDefinition Height="150"></RowDefinition>
-            <RowDefinition Height="45"></RowDefinition>
-            <RowDefinition Height="150"></RowDefinition>
-            <RowDefinition Height="35"></RowDefinition>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
 
-        <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"></Label>
+        <Label x:Name="lblTitle" Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource Title}" Content="AQqpPHJjkK"/>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label Style="{StaticResource Label}">Cuộc họp:</Label>
-            <ComboBox x:Name="cmbHopBCH" Style="{StaticResource InputComboBox}" MinWidth="250" />
+            <Label Style="{StaticResource Label}" Content="Cuộc họp"/>
+            <Label Style="{StaticResource Label}" Content="Năm:"/>
+            <ComboBox x:Name="cmbNam" Style="{StaticResource InputComboBox}" MinWidth="100" SelectionChanged="cmbNam_SelectionChanged"/>
+            <Label Style="{StaticResource Label}" Content="Tháng:"/>
+            <ComboBox x:Name="cmbThang" Style="{StaticResource InputComboBox}" MinWidth="100" SelectionChanged="cmbThang_SelectionChanged"/>
         </StackPanel>
 
-        <DataGrid Grid.Row="2">
+        <DataGrid x:Name="hop_bchDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Grid.Row="2" RowDetailsVisibilityMode="VisibleWhenSelected" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" MinRowHeight="23" IsReadOnly="True">
+            <DataGrid.Columns>
 
+                <DataGridTextColumn x:Name="namColumn" Width="Auto" Header="Năm" Binding="{Binding nam}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn x:Name="thangColumn" Width="Auto" Header="Tháng" Binding="{Binding thang}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="ho_tenColumn" Width="Auto" Header="Họ tên" Binding="{Binding thanh_vien.ho_ten}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="ngay_sinhColumn" Width="Auto" Header="Ngày sinh" Binding="{Binding thanh_vien.ngay_sinh, StringFormat=\{0:MMM dd yyyy\}}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+
+            </DataGrid.Columns>
         </DataGrid>
 
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5">
-            <Button Margin="10,0" Width="36" >
-                <Image Source="D:\GitReposLab\WPFRepos\QuanLyHoiNguoiCaoTuoi\QuanLyHoiNguoiCaoTuoi\Images\up.png" />
+            <Button Name="btnAdd" Margin="10,0" Width="36" Click="btnAdd_Click">
+                <Image Source="D:\GitRepos\WPFRepos\QuanLyHoiNguoiCaoTuoi\QuanLyHoiNguoiCaoTuoi\UI\Images\up.png" />
             </Button>
-            <Button Margin="10,0" Width="36">
-                <Image Source="D:\GitReposLab\WPFRepos\QuanLyHoiNguoiCaoTuoi\QuanLyHoiNguoiCaoTuoi\Images\down.png" />
+            <Button Name="btnRemove" Margin="10,0" Width="36" Click="btnRemove_Click">
+                <Image Source="D:\GitRepos\WPFRepos\QuanLyHoiNguoiCaoTuoi\QuanLyHoiNguoiCaoTuoi\UI\Images\down.png" />
             </Button>
         </StackPanel>
-
-        <DataGrid Grid.Row="4">
-
-        </DataGrid>
 
         <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" Margin="5,10,5,0" HorizontalAlignment="Right">
-            <Button x:Name="btnOK" Style="{StaticResource ButtonOK}" Width="50" Margin="5,0" IsDefault="True" Click="btnOK_Click">
-                OK
-            </Button>
-            <Button x:Name="btnClose" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" >
-                Close
-            </Button>
+            <Button x:Name="btnClose" Style="{StaticResource ButtonClose}" Margin="5,0" Width="50" IsCancel="True" Content="Close" />
         </StackPanel>
+        <DataGrid x:Name="thong_tin_ban_chap_hanhDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource thong_tin_ban_chap_hanhViewSource}}" Grid.Row="4" RowDetailsVisibilityMode="VisibleWhenSelected" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" MinRowHeight="23" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="id_thanh_vienColumn" Width="Auto" Header="ID" Binding="{Binding thanh_vien.id_thanh_vien}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="ho_ten_tvColumn" Width="Auto" Header="Họ tên" Binding="{Binding thanh_vien.ho_ten}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="ngay_sinh_tvColumn" Width="Auto" Header="Ngày sinh" Binding="{Binding thanh_vien.ngay_sinh, StringFormat=\{0:MMM dd yyyy\}}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="gioi_tinhColumn" Width="Auto" Header="Giới tính">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Text" Value="Nam" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding thanh_vien.gioi_tinh}" Value="True">
+                                    <Setter Property="Text" Value="Nữ" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="dia_chiColumn" Width="Auto" Header="Địa chỉ" Binding="{Binding thanh_vien.dia_chi}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="id_khu_phoColumn" Width="Auto" Header="Khu phố" Binding="{Binding thanh_vien.khu_pho.ten_khu_pho}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="chuc_vuColumn" Width="Auto" Header="Chức vụ" Binding="{Binding thanh_vien.chuc_vu}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn x:Name="ngay_tham_giaColumn" Width="Auto" Header="Ngày tham gia" Binding="{Binding thanh_vien.ngay_tham_gia, StringFormat=\{0:MMM dd yyyy\}}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
 </Window>
